--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav class="bg-white shadow-lg py-7 px-20 hidden md:block">
         <div class="container mx-auto flex flex-row items-center justify-between">
             <div class="flex flex-row gap-2 items-center">
-                <img src="/assets/logo.png" alt="">
+                <img src="https://nafishandoko.github.io/SkwnFrontendDev-a-Nafis-Arinda-Rizky-Putra-Handoko/assets/logo.png" alt="">
                 <span class="text-custom-brown font-semibold text-2xl">Dekoor</span>
             </div>
             <ul class="flex flex-row items-center gap-20 font-medium">
@@ -46,7 +46,7 @@
     <nav class="bg-white shadow-lg py-7 md:hidden">
         <div class="container mx-auto flex flex-row justify-between items-center px-10">
             <div class="flex flex-row gap-3 items-center">
-                <img src="/assets/logo.png" alt="" class="w-3/5">
+                <img src="https://nafishandoko.github.io/SkwnFrontendDev-a-Nafis-Arinda-Rizky-Putra-Handoko/assets/logo.png" alt="" class="w-3/5">
                 <span class="text-custom-brown font-semibold text-2xl">Dekoor</span>
             </div>
             <button><i class="bi bi-list text-4xl"></i></button>
@@ -72,7 +72,7 @@
             </div>
         </div>
         <div
-            class="w-full md:w-2/6 h-full bg-blue-500 bg-cover bg-center bg-[url('/assets/header.png')] flex flex-col items-start justify-end">
+            class="w-full md:w-2/6 h-full bg-blue-500 bg-cover bg-center bg-[url('https://nafishandoko.github.io/SkwnFrontendDev-a-Nafis-Arinda-Rizky-Putra-Handoko/assets/header.png')] flex flex-col items-start justify-end">
             <div class="flex flex-col items-start gap-5 p-14 pb-20">
                 <span class="bg-white/[.5] rounded-lg px-4 py-2">$329</span>
                 <span class="text-5xl text-white">Pösht Sofa</span>
@@ -117,10 +117,10 @@
                 <span>PARTNERED BRANDS</span>
             </div>
             <div class="flex flex-row items-center gap-10 md:gap-20">
-                <img src="/assets/gusto.png" alt="" class="w-1/6">
-                <img src="/assets/stripe.png" alt="" class="w-1/6">
-                <img src="/assets/treehouse.png" alt="" class="w-1/6">
-                <img src="/assets/upwork.png" alt="" class="w-1/6">
+                <img src="https://nafishandoko.github.io/SkwnFrontendDev-a-Nafis-Arinda-Rizky-Putra-Handoko/assets/gusto.png" alt="" class="w-1/6">
+                <img src="https://nafishandoko.github.io/SkwnFrontendDev-a-Nafis-Arinda-Rizky-Putra-Handoko/assets/stripe.png" alt="" class="w-1/6">
+                <img src="https://nafishandoko.github.io/SkwnFrontendDev-a-Nafis-Arinda-Rizky-Putra-Handoko/assets/treehouse.png" alt="" class="w-1/6">
+                <img src="https://nafishandoko.github.io/SkwnFrontendDev-a-Nafis-Arinda-Rizky-Putra-Handoko/assets/upwork.png" alt="" class="w-1/6">
             </div>
         </div>
     </section>
@@ -203,7 +203,7 @@
             class="container mx-auto flex flex-col md:flex-row p-10 md:p-20 text-center md:text-start items-center gap-5">
             <div class="w-full md:w-1/2 flex flex-col gap-5 md:gap-10 items-center md:items-start">
                 <div class="flex flex-row items-center gap-3">
-                    <img src="/assets/logo.png" alt="" width="30">
+                    <img src="https://nafishandoko.github.io/SkwnFrontendDev-a-Nafis-Arinda-Rizky-Putra-Handoko/assets/logo.png" alt="" width="30">
                     <span class="font-bold">Dekoor</span>
                 </div>
                 <p class="text-gray-500">Dekoor is a furniture company created to fulfill the needs of family with
