--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <nav class="bg-white shadow-lg py-7 px-20 hidden md:block">
+    <nav class="bg-white shadow-lg py-7 px-20 hidden lg:block">
         <div class="container mx-auto flex flex-row items-center justify-between">
             <div class="flex flex-row gap-2 items-center">
                 <img src="https://nafishandoko.github.io/SkwnFrontendDev-a-Nafis-Arinda-Rizky-Putra-Handoko/assets/logo.png" alt="">
@@ -43,7 +43,7 @@
             </div>
         </div>
     </nav>
-    <nav class="bg-white shadow-lg py-7 md:hidden">
+    <nav class="bg-white shadow-lg py-7 lg:hidden">
         <div class="container mx-auto flex flex-row justify-between items-center px-10">
             <div class="flex flex-row gap-3 items-center">
                 <img src="https://nafishandoko.github.io/SkwnFrontendDev-a-Nafis-Arinda-Rizky-Putra-Handoko/assets/logo.png" alt="" class="w-3/5">
@@ -52,13 +52,13 @@
             <button><i class="bi bi-list text-4xl"></i></button>
         </div>
     </nav>
-    <header class="flex flex-col md:flex-row h-[90vh] gap-10">
-        <div class="w-full md:w-4/6 flex flex-col items-center justify-center py-10 md:py-0">
-            <div class="flex flex-col items-center md:items-start px-10 md:px-28 gap-5">
-                <h1 class="font-bold text-3xl md:text-7xl text-center md:text-start">The kind of <span
+    <header class="flex flex-col lg:flex-row md:h-[90vh] gap-10">
+        <div class="w-full lg:w-4/6 flex flex-col items-center justify-center py-10 lg:py-0">
+            <div class="flex flex-col items-center lg:items-start px-10 lg:px-28 gap-5">
+                <h1 class="font-bold text-3xl lg:text-7xl text-center lg:text-start">The kind of <span
                         class="text-custom-brown-light">furniture</span> you
                     have been looking for</h1>
-                <div class="flex flex-col md:flex-row gap-4 items-stretch">
+                <div class="flex flex-col lg:flex-row gap-4 items-stretch">
                     <a href="#" class="bg-custom-green font-regular text-custom-brown py-3 px-5 rounded-lg space-x-2">
                         <i class="bi bi-search"></i>
                         <span>SEARCH CATALOG</span>
@@ -72,7 +72,7 @@
             </div>
         </div>
         <div
-            class="w-full md:w-2/6 h-full bg-blue-500 bg-cover bg-center bg-[url('https://nafishandoko.github.io/SkwnFrontendDev-a-Nafis-Arinda-Rizky-Putra-Handoko/assets/header.png')] flex flex-col items-start justify-end">
+            class="w-full lg:w-2/6 h-full bg-blue-500 bg-cover bg-center bg-[url('https://nafishandoko.github.io/SkwnFrontendDev-a-Nafis-Arinda-Rizky-Putra-Handoko/assets/header.png')] flex flex-col items-start justify-end">
             <div class="flex flex-col items-start gap-5 p-14 pb-20">
                 <span class="bg-white/[.5] rounded-lg px-4 py-2">$329</span>
                 <span class="text-5xl text-white">Pösht Sofa</span>
@@ -81,11 +81,11 @@
         </div>
     </header>
     <section id="services" class="bg-custom-brown text-custom-green">
-        <div class="container mx-auto flex flex-col gap-10 p-10 md:p-20">
-            <span class="text-center md:text-start">WHY CHOOSE US?</span>
-            <h2 class="font-bold text-4xl md:text-6xl text-center md:text-start">We care about details and the quality
+        <div class="container mx-auto flex flex-col gap-10 p-10 lg:p-20">
+            <span class="text-center lg:text-start">WHY CHOOSE US?</span>
+            <h2 class="font-bold text-4xl lg:text-6xl text-center lg:text-start">We care about details and the quality
                 of our products</h2>
-            <div class="flex flex-col md:flex-row justify-between md:space-x-28 gap-4 font-medium">
+            <div class="flex flex-col lg:flex-row justify-between lg:space-x-28 gap-4 font-medium">
                 <div class="flex flex-row items-center gap-3">
                     <div
                         class="w-10 aspect-square flex items-center justify-center text-white bg-custom-green/[.5] rounded-md">
@@ -111,12 +111,12 @@
         </div>
     </section>
     <section id="partners" class="bg-custom-grey text-custom-brown">
-        <div class="container mx-auto flex flex-col md:flex-row items-center justify-between p-10 md:p-20 gap-4">
-            <div class="flex flex-col items-center md:items-start">
-                <span class="font-bold text-5xl md:text-7xl">25+</span>
+        <div class="container mx-auto flex flex-col lg:flex-row items-center justify-between p-10 lg:p-20 gap-4">
+            <div class="flex flex-col items-center lg:items-start">
+                <span class="font-bold text-5xl lg:text-7xl">25+</span>
                 <span>PARTNERED BRANDS</span>
             </div>
-            <div class="flex flex-row items-center gap-10 md:gap-20">
+            <div class="flex flex-row items-center lg:gap-20 justify-between">
                 <img src="https://nafishandoko.github.io/SkwnFrontendDev-a-Nafis-Arinda-Rizky-Putra-Handoko/assets/gusto.png" alt="" class="w-1/6">
                 <img src="https://nafishandoko.github.io/SkwnFrontendDev-a-Nafis-Arinda-Rizky-Putra-Handoko/assets/stripe.png" alt="" class="w-1/6">
                 <img src="https://nafishandoko.github.io/SkwnFrontendDev-a-Nafis-Arinda-Rizky-Putra-Handoko/assets/treehouse.png" alt="" class="w-1/6">
@@ -124,21 +124,21 @@
             </div>
         </div>
     </section>
-    <section id="categories" class="flex flex-col-reverse items-stretch md:flex-row gap-10 p-10 md:p-20 md:pl-0">
-        <div class="flex flex-row w-full md:w-3/5 items-stretch gap-5">
+    <section id="categories" class="flex flex-col-reverse items-stretch lg:flex-row gap-10 p-10 lg:p-20 lg:pl-0">
+        <div class="flex flex-row w-full lg:w-3/5 items-stretch gap-5">
             <div
-                class="rounded-xl w-1/3 md:w-1/5 h-40 md:h-auto bg-cover bg-center bg-[url('https://images.unsplash.com/photo-1583847268964-b28dc8f51f92?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80')]">
+                class="rounded-xl w-1/3 lg:w-1/5 h-40 lg:h-auto bg-cover bg-center bg-[url('https://images.unsplash.com/photo-1583847268964-b28dc8f51f92?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80')]">
             </div>
             <div
-                class="rounded-xl w-1/3 md:w-1/5 bg-cover bg-center bg-[url('https://images.unsplash.com/photo-1616047006789-b7af5afb8c20?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80')]">
+                class="rounded-xl w-1/3 lg:w-1/5 bg-cover bg-center bg-[url('https://images.unsplash.com/photo-1616047006789-b7af5afb8c20?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80')]">
             </div>
             <div
-                class="rounded-xl w-1/3 md:w-3/5 bg-cover bg-center bg-[url('https://images.unsplash.com/photo-1584280795027-321f4d68e77b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80')]">
+                class="rounded-xl w-1/3 lg:w-3/5 bg-cover bg-center bg-[url('https://images.unsplash.com/photo-1584280795027-321f4d68e77b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80')]">
             </div>
         </div>
-        <div class="flex flex-col items-stretch w-full md:w-2/5 gap-5 md:mr-10">
-            <span class="text-center md:text-start">Categories</span>
-            <h2 class="font-bold text-4xl md:text-5xl text-center md:text-start">Furniture Sets Recommendations</h2>
+        <div class="flex flex-col items-stretch w-full lg:w-2/5 gap-5 lg:mr-10">
+            <span class="text-center lg:text-start">Categories</span>
+            <h2 class="font-bold text-3xl lg:text-5xl text-center lg:text-start">Furniture Sets Recommendations</h2>
             <div class="bg-custom-grey flex flex-col rounded-xl">
                 <span class="font-bold p-4">Bedroom</span>
                 <div class="flex flex-col bg-custom-green p-4 gap-2">
@@ -152,27 +152,27 @@
         </div>
     </section>
     <section id="products" class="bg-custom-brown">
-        <div class="container mx-auto flex flex-col p-10 md:p-20 gap-10">
+        <div class="container mx-auto flex flex-col p-10 lg:p-20 gap-10">
             <div class="flex flex-row items-center justify-between">
                 <div class="flex flex-col text-custom-green gap-1">
                     <span>OUR PRODUCTS</span>
-                    <h2 class="font-bold text-2xl md:text-4xl">This month's best seller</h2>
+                    <h2 class="font-bold text-2xl lg:text-4xl">This month's best seller</h2>
                 </div>
                 <a href="#" class="bg-custom-green text-custom-brown rounded-lg px-5 py-2">SEE MORE</a>
             </div>
             <div class="flex flex-col gap-7">
                 <div class="flex flex-row justify-between gap-8">
                     <div
-                        class="bg-cover bg-center w-1/4 h-72 rounded-xl bg-[url('https://images.unsplash.com/photo-1505843490538-5133c6c7d0e1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1518&q=80')]">
+                        class="bg-cover bg-center w-1/2 lg:w-1/4 h-40 lg:h-72 rounded-xl bg-[url('https://images.unsplash.com/photo-1505843490538-5133c6c7d0e1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1518&q=80')]">
                     </div>
                     <div
-                        class="bg-cover bg-center w-1/4 h-72 rounded-xl bg-[url('https://images.unsplash.com/photo-1567016432779-094069958ea5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80')]">
+                        class="bg-cover bg-center w-1/2 lg:w-1/4 h:40 lg:h-72 rounded-xl bg-[url('https://images.unsplash.com/photo-1567016432779-094069958ea5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80')]">
                     </div>
                     <div
-                        class="bg-cover bg-center w-1/4 h-72 rounded-xl bg-[url('https://images.unsplash.com/photo-1594125674956-61a9b49c8ecc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80')]">
+                        class="hidden lg:block bg-cover bg-center w-1/4 h-72 rounded-xl bg-[url('https://images.unsplash.com/photo-1594125674956-61a9b49c8ecc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80')]">
                     </div>
                     <div
-                        class="bg-cover bg-center w-1/4 h-72 rounded-xl bg-[url('https://images.unsplash.com/photo-1635286721033-e11cf9e632c4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1404&q=80')]">
+                        class="hidden lg:block bg-cover bg-center w-1/4 h-72 rounded-xl bg-[url('https://images.unsplash.com/photo-1635286721033-e11cf9e632c4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1404&q=80')]">
                     </div>
                 </div>
                 <div class=" flex flex-row gap-4 justify-end px-20">
@@ -186,13 +186,13 @@
             </div>
         </div>
     </section>
-    <section id="register" class="bg-custom-grey text-center md:text-start">
-        <div class="container mx-auto flex flex-col gap-5 md:gap-10 p-10 md:p-20 items-stretch">
+    <section id="register" class="bg-custom-grey text-center lg:text-start">
+        <div class="container mx-auto flex flex-col gap-5 lg:gap-10 p-10 lg:p-20 items-stretch">
             <span>LIMITED DEALS</span>
-            <h2 class="font-bold text-3xl md:text-6xl">Become a member and get 10% off of your first purchase</h2>
+            <h2 class="font-bold text-3xl lg:text-6xl">Become a member and get 10% off of your first purchase</h2>
             <div class="flex flex-row items-stretch">
                 <input type="text" name="" id="" placeholder="Enter your email here"
-                    class="bg-white px-6 rounded-l-lg w-full md:w-96">
+                    class="bg-white px-6 rounded-l-lg w-full lg:w-96">
                 <div class="bg-custom-green rounded-r-lg flex items-center justify-center w-14 aspect-square"><i
                         class="bi bi-envelope"></i></div>
             </div>
@@ -200,8 +200,8 @@
     </section>
     <footer>
         <div
-            class="container mx-auto flex flex-col md:flex-row p-10 md:p-20 text-center md:text-start items-center gap-5">
-            <div class="w-full md:w-1/2 flex flex-col gap-5 md:gap-10 items-center md:items-start">
+            class="container mx-auto flex flex-col lg:flex-row p-10 lg:p-20 text-center lg:text-start items-center gap-5">
+            <div class="w-full lg:w-1/2 flex flex-col gap-5 lg:gap-10 items-center lg:items-start">
                 <div class="flex flex-row items-center gap-3">
                     <img src="https://nafishandoko.github.io/SkwnFrontendDev-a-Nafis-Arinda-Rizky-Putra-Handoko/assets/logo.png" alt="" width="30">
                     <span class="font-bold">Dekoor</span>
@@ -210,9 +210,9 @@
                     aesthetic feeling in their
                     furniture. Always pay attention to details and give clear communication for the customers. Priority
                     of our design is comfortability.</p>
-                <span class="text-gray-500 hidden md:inline-block">©Copyright 2022 Dekoor</span>
+                <span class="text-gray-500 hidden lg:inline-block">©Copyright 2022 Dekoor</span>
             </div>
-            <div class="w-full md:w-1/2 flex flex-row justify-between md:justify-end gap-10">
+            <div class="w-full lg:w-1/2 flex flex-row justify-between lg:justify-end gap-10">
                 <div class="flex flex-col gap-5 text-gray-500">
                     <span class="font-medium text-lg text-black">Support</span>
                     <a href="#">FAQ</a>
