--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     of our design is comfortability.</p>
                 <span class="text-gray-500 hidden lg:inline-block">©Copyright 2022 Dekoor</span>
             </div>
-            <div class="w-full lg:w-1/2 flex flex-row flex-wrap justify-between lg:justify-end gap-10">
+            <div class="w-full lg:w-1/2 flex flex-row flex-wrap justify-center lg:justify-end gap-10">
                 <div class="flex flex-col gap-5 text-gray-500">
                     <span class="font-medium text-lg text-black">Support</span>
                     <a href="#">FAQ</a>
